# Serenity_Logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  License  MakeErrors.txt  Profiling.txt  README.md  Serenity - Shortcut.lnk  TODO.txt  Thoughts.txt  Todo.txt  appveyor.yml  cmake-format.yaml
.github/workflows/: build.yml  msvc.yml
Demos/: CMakeLists.txt
Demos/Color Tagging/: ColorDemo.cpp
Docs/html/: annotated.html  annotated_dup.js  classes.html  dir_15f4864dae153064324b60782e338f96.html  dir_15f4864dae153064324b60782e338f96.js  dir_23366a7cd51e8096ace8484a0d82b2ee.html  dir_3d0a7fabf0def69a3e807317feb15a3c.html  dir_3d0a7fabf0def69a3e807317feb15a3c.js  dir_4834ef69f721cd60132a4d6bc99ffb96.html  dir_4834ef69f721cd60132a4d6bc99ffb96.js  dir_5540d881d349f2001ac6f3b528e6cbdc.html  dir_5540d881d349f2001ac6f3b528e6cbdc.js  dir_887e04aff01ed373d2292660d7ffbb6d.html  dir_887e04aff01ed373d2292660d7ffbb6d.js  dir_b0d13833306407dc40647b15d0f913fe.html  dir_b0d13833306407dc40647b15d0f913fe.js  dir_b1a1c8748e71fb19983fbc428d67d568.html  dir_d2e1acaa957b2a5f53d2599866d30af8.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespaces.html  navtreedata.js  navtreeindex0.js
Docs/latex/: annotated.tex  files.tex  hierarchy.tex  refman.tex
Resources/: Doxyfile  Doxyfile_Laptop
Resources/AF_Specialization_Timings/: Comparison_Pre&Post_Shift.md
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  demoTestMain.cpp
Sandbox/src/Experimental_SB/: Common.cpp  Common.h  Documentation.h  Experimental_Sandbox.cpp
Sandbox/src/Experimental_SB/MessageDetails/: FlushPolicy.cpp  FlushPolicy.h  Message_Formatter.cpp  Message_Formatter.h  Message_Info.cpp  Message_Info.h  Message_Pattern.cpp  Message_Pattern.h  Message_Time.cpp  Message_Time.h
Sandbox/src/Experimental_SB/SeparateSandbox/Serenity_Sandbox/: .clang-format  CMakeLists.txt  Source.cpp  Utilities.cpp  Utilities.h
Sandbox/src/Experimental_SB/Targets/: ColorConsoleTarget.cpp  ColorConsoleTarget.h  FileTarget.cpp  FileTarget.h  RotatingTarget.cpp  RotatingTarget.h  Target-impl.h  Target.cpp  Target.h
Serenity/: CMakeLists.txt
Serenity/Doc_Header/: Documentation.h  mainpage.md
Serenity/experimental/: LibLogger.cpp  LibLogger.h
Serenity/include/serenity/: Common.h  Common.hpp  Defines.h  Defines.hpp  LogFileHelper.hpp  Logger-impl.h  Logger.h  Logger.hpp  Logger.tpp  Version.h  initialTest.hpp  temp.hpp  xn3xultt.3gv~
Serenity/include/serenity/Cache/: LoggerCache.hpp
Serenity/include/serenity/Color/: Color.h
Serenity/include/serenity/CustomFormat/: argfmt_backend.h  fmtlib_backend.h  stdfmt_backend.h
Serenity/include/serenity/Helpers/: LibLogger.h  LogFileHelper.h  LogFileHelper.hpp
Serenity/include/serenity/Interfaces/: IObserver.h  IObserver.hpp
Serenity/include/serenity/MessageDetails/: ArgContainer.h  ArgContainerImpl.h  ArgFormatter.h  ArgFormatterImpl.h  FlushPolicy.h  FormatterArgs.h  LazyParser.h  Message_Formatter.h  Message_Formatter_Impl.h  Message_Info.h  Message_Time.h
Serenity/include/serenity/Sinks/: SinkInfo.h  Sinks.h  StdSplitSink.h
Serenity/include/serenity/Targets/: ColorConsoleTarget.h  ConsoleTarget.h  FileTarget.h  RotatingTarget.h  Target-impl.h  Target.h
Serenity/include/serenity/Utilities/: FileHelper.h  FormatBackend.h  TargetHelper.h  UtfHelper.h  Utilities.h  Utilities.hpp
Serenity/include/serenity/WIP/: core.hpp  temp.hpp  temp2.hpp
Serenity/include/serenity/WIP/Interfaces/: IObserver.hpp
Serenity/src/: Common.cpp  LibLogger.cpp  LogFileHelper.cpp  Logger.cpp  LoggerCache.cpp  Sinks.cpp  Utilities.cpp  initialTest.cpp
Serenity/src/Color/: Color.cpp
Serenity/src/MessageDetails/: ArgContainer.cpp  ArgFormatter.cpp  FlushPolicy.cpp  FormatterArgs.cpp  LazyParser.cpp  Message_Formatter.cpp  Message_Info.cpp  Message_Time.cpp
Serenity/src/Targets/: ColorConsoleTarget.cpp  ConsoleTarget.cpp  FileTarget.cpp  RotatingTarget.cpp  Target.cpp
Serenity/src/Utilities/: FileHelper.cpp  TargetHelper.cpp  Utilities.cpp
bench/: CMakeLists.txt
bench/src/: Benchmark.cpp
cmake/: Incremental_Build.cmake  Options.cmake  PreventInSrcBuilds.cmake
docs/: annotated_dup.js  classes.html  dir_25016bbcb879da7c54985b77ea44d80f.js  dir_8cc19d8989c21769a5e756d303c9a132.html  dir_8cc19d8989c21769a5e756d303c9a132.js  dir_aba6978c0ba59fdcaeb1a52bf45249ba.html  dir_c0e8fe3b2c0e61c24cd0729000432fab.html  dir_d2e1acaa957b2a5f53d2599866d30af8.html  dir_d2e1acaa957b2a5f53d2599866d30af8.js  dir_d5515b87657f3ff3078f8f8cf7129aa5.html  dir_e3d739b3779417b00ef47faf658a374e.html  dir_e5f679665f2adf421044a9f43942cf58.html  files.html  files_dup.js  functions.html  hierarchy.js  index.html  menudata.js  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js
docs/Serenity/: CMakeLists.txt
docs/search/: all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  defines_8.js  enums_0.js  (+30 more)
html/: dir_25016bbcb879da7c54985b77ea44d80f.html  dir_8cc19d8989c21769a5e756d303c9a132.html  dir_8cc19d8989c21769a5e756d303c9a132.js  dir_b1a1c8748e71fb19983fbc428d67d568.html  dir_bbf39d9e614d7650e257b225f2e2bf39.html  dir_bbf39d9e614d7650e257b225f2e2bf39.js  dir_c0e8fe3b2c0e61c24cd0729000432fab.js  dir_d5515b87657f3ff3078f8f8cf7129aa5.js  dir_e3d739b3779417b00ef47faf658a374e.js  files.html  functions_func.html  globals.html  globals_defs.html  hierarchy.html  index.html  namespacemembers.html  navtreeindex0.js  navtreeindex1.js
scripts/: build.bat  build.sh  build_fmt.txt  clang_format.bat  clang_format.sh  clean.bat  clean.sh  cmake_format.bat  cmake_format.sh  git_push.bat  git_push.sh  launch.bat  update.bat  update.sh
tests/: CMakeLists.txt  FormattingArgsTest.cpp  RotatingTests.cpp
(+396 files in other folders)
